# py_anndata_visualizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev_notebook.ipynb  example_notebook.ipynb  launch_pipeline.py  pyproject.toml  requirements.txt  segmentation_pipeline_master.py  segmentation_wizard.py  setup.py  setup_test_data.py  spatial_scatter_2.py  updated_pyav.py
config/: pipeline_config.yaml  pipeline_test_20260315_220756.yaml  test_config.yaml
container/: Singularity_spatial_segmentation_v1  Singularity_spatial_segmentation_v2  Singularity_spatial_segmentation_v3  Singularity_spatial_segmentation_v4  Singularity_spatial_segmentation_v5  Singularity_spatial_segmentation_v6  spatial_segmentation_env_v1.yml  spatial_segmentation_env_v2.yml  spatial_segmentation_env_v3.yml
notebooks/: 01_data_exploration.ipynb  02_method_results.ipynb  03_qc_comparison.ipynb  04_bidcell_workflow.ipynb  05_r_postprocessing.ipynb  06_segger_comparison.ipynb  Rank_based_predictions_quick_annot.ipynb
old_files/: test.py
scripts/python/: run_baysor.py  run_bidcell.py  run_cellpose.py  run_comseg.py  run_fastreseg.py  run_proseg.py  run_qc.py  run_rough_annotation_classifer.py  run_stardist.py  run_xenium_export.py
scripts/r/: fastreseg.R  qc_report.R
scripts/segger_functions/: __init__.py  metrics.py
scripts/slurm/: generate_slurm.py
scripts/utils/: __init__.py  config_loader.py  data_io.py  notify.py  notify_chain.py
src/py_anndata_visualizer/: __init__.py
src/py_anndata_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/py_anndata_visualizer/bridge/: __init__.py  communication.py  link_buttons.py
src/py_anndata_visualizer/css/: styles.css
src/py_anndata_visualizer/helpers/: __init__.py  communication.py
(+11 files in other folders)
